# whisperlinux

./: .gitignore  LICENSE  PRD.md  README.md  architecture.md  install.sh
backend/: pyproject.toml
backend/app/: audio.py  config.py  main.py  pipeline.py  schemas.py
backend/app/api/: routes.py  ws.py
backend/app/cleanup/: gemini.py
backend/app/hotkey/: base.py  cli_trigger.py  factory.py  socket_trigger.py  x11.py
backend/app/injection/: base.py  wayland.py  x11.py
backend/app/stt/: engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: StatusBar.tsx
frontend/src/lib/: api.ts  types.ts  useStatus.ts
frontend/src/pages/: History.tsx  Settings.tsx
packaging/systemd/: whisperlinux.service
packaging/udev/: 60-whisperlinux-uinput.rules
