[project]
name = "whisperlinux"
version = "0.1.0"
description = "System-wide voice dictation for Linux: local speech-to-text + Gemini Flash cleanup, typed directly into the focused app."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "webrtcvad>=2.0.10",
    "google-genai>=0.3.0",
    "keyring>=25.0",
    "pydantic>=2.7",
    "pynput>=1.7",
    "pystray>=0.19; sys_platform == 'linux'",
    "Pillow>=10.0",
]

[project.scripts]
whisperlinux = "app.main:run"
whisperlinux-toggle = "app.hotkey.cli_trigger:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["app*"] } }

